Bug 58571 - Invalid ODF 1.2: " tag name "text:p""
Summary: Invalid ODF 1.2: " tag name "text:p""
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA odf_validation target:4.0.0.1 tar...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-20 12:34 UTC by Rainer Bielefeld Retired
Modified: 2012-12-26 19:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test kit with sample documents and validation results (59.43 KB, application/zip)
2012-12-20 12:34 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-12-20 12:34:58 UTC
Created attachment 71851 [details]
Test kit with sample documents and validation results

Save attached "spreadsheetsamplesourceodf_4000_12.ods" from LibO4 with ODF 1.2 (strict) ant try validator <http://odf-validator2.rhcloud.com/> (or do validation directly with sample)

Result: spreadsheetsamplesourceodf12.ods/content.xml[2,4217]: Error: tag name "text:p" is not allowed. Possible tag names are: <applet>,<contour-path>,<contour-polygon>,<desc>,<event-listeners>,<floating-frame>,<glue-point>,<image-map>,<image>,<object-ole>,<object>,<plugin>,<table>,<text-box>,<title>

If you save the document from 3.6.4.3 a new validation will be passed without complaints like "spreadsheetsamplesourceodf_3643_12.ods")
              
Operating System: Windows XP
Version: 4.0.0.0.beta1
Last worked in: 3.6.4.3 release
Comment 1 Rainer Bielefeld Retired 2012-12-20 12:45:13 UTC
Already [Reproducible] with 
* unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI /
German Locale  [Build ID: af60316514f3ae3d4c475819bf86f2af837171e)]" 
{tinderbox: Win-x86@6, pull time 2012-11-23 22:10:31} on German WIN7 Home
Premium (64bit) with own separate User Profile 

Still was OK with
* Server-installation of Master "3.7.0.alpha0+  – ENGLISH UI [Build ID:
f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7
Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

Same time range where the problem started like for "Bug 58562 - EDITING: copy and paste of CHART from Calc looses Y values" - what ever that might mean.
Comment 2 Markus Mohrhard 2012-12-26 05:25:14 UTC
Some debugging shows that we inherit this bug from our rebase. It has been introduced by Armin for fixing https://issues.apache.org/ooo/show_bug.cgi?id=118485
Comment 3 Markus Mohrhard 2012-12-26 18:50:30 UTC
Looks like I have a fix for it.
Comment 4 Not Assigned 2012-12-26 19:02:16 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5229f497008051b078e9f76e00031dfb3b6f41f&h=libreoffice-4-0

text:p is not allowed for chart objects, fdo#58571


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-12-26 19:02:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e41982ac165092ed024b8ab318eedc7fcf4c6a9

text:p is not allowed for chart objects, fdo#58571



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.