text:p is not allowed for chart objects, fdo#58571

Change-Id: I24c485d31ea3f0540164ff65074b392be1e557e6